# drg-deep-dive-info-formatter

./: .gitignore  Cargo.toml  README.md
input/: info.example.json
src/: main.rs
